solved overflow problem on smaller screens

--- a/development/styles.css
+++ b/development/styles.css
@@ -24,6 +24,10 @@ Common Styles
   font-weight: 400;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   background-color: var(--background-color);
   overflow-x: hidden;
